--- a/todo/pubspec.yaml
+++ b/todo/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   step_progress_indicator: ^1.0.2
   intl: ^0.17.0
   simple_gradient_text: ^1.2.3
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
