--- a/todo/pubspec.yaml
+++ b/todo/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   intl: ^0.17.0
   simple_gradient_text: ^1.2.3
   flutter_spinkit: ^5.1.0
+  shamsi_date: ^1.0.1
+
 
 dev_dependencies:
   flutter_test:
