--- a/todo/pubspec.yaml
+++ b/todo/pubspec.yaml
@@ -44,11 +44,18 @@ dependencies:
   simple_gradient_text: ^1.2.3
   flutter_spinkit: ^5.1.0
   shamsi_date: ^1.0.1
+  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.3
+
+flutter_icons:
+  image_path: "assets/images/logo.png"
+  android: true
+  ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
